<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/item0" />
        <item
            android:id="@+id/prof"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/item1" />
        <item
            android:id="@+id/btn"
            android:icon="@drawable/ic_smart_button_24"
            android:title="@string/item2" />
        <item
            android:id="@+id/chip"
            android:icon="@drawable/ic_chips_24"
            android:title="@string/item3" />
        <item
            android:id="@+id/check"
            android:icon="@drawable/ic_check_box_24"
            android:title="@string/item4" />
        <item
            android:id="@+id/radios"
            android:icon="@drawable/ic_radio_button"
            android:title="@string/item5" />
        <item
            android:id="@+id/toggles"
            android:icon="@drawable/ic_legend_toggle_24"
            android:title="@string/item6" />
        <item
            android:id="@+id/CRUD"
            android:icon="@drawable/ic_view_list_24"
            android:title="@string/item7" />
        <item
            android:id="@+id/nav_darkmode_id"
            android:title="@string/item8"
            android:icon="@drawable/icbrightness_24"
            app:actionLayout="@layout/nav_drawer_darkmode_switch"
            />
    </group>
</menu>