<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#03FF08"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/CRUD_TITLE"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Input_Name"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/inputname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:backgroundTint="#0089FF"
            android:text="@string/btnAdd" />

        <Button
            android:id="@+id/update"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:backgroundTint="#00D60A"
            android:text="@string/btnUpdate" />

        <Button
            android:id="@+id/clear"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:backgroundTint="#FF0000"
            android:text="@string/btnClear" />

    </LinearLayout>

    <ListView
        android:id="@+id/listNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>